<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.AccountChooserScreen">

    <include layout="@layout/app_bar_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/big_padding"
            app:srcCompat="@drawable/ic_car_collision"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto_bold_italic"
            android:text="@string/accidenta"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/text_view_large_size" />


        <Button
            android:id="@+id/user_signIn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:background="@drawable/transparent_button_background"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:elevation="10dp"
            android:padding="@dimen/content_padding"
            android:text="@string/iamauser"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_view_regular_size"
            tools:targetApi="lollipop"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/admin_signIn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/transparent_button_background"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_security_black_24dp"
            android:elevation="@dimen/content_padding"
            android:padding="@dimen/content_padding"
            android:text="@string/iamanadmin"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_view_regular_size"
            tools:targetApi="lollipop"
            tools:ignore="RtlCompat" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>